--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/yashraj1054/Real-Estate-Website">Real Estate Website</a></h3>
-                <p>a Web-Based Real-Estate website with Multiple
+                <p>A Web-Based Real-Estate website with Multiple
 					Fuctionalities such as listing property, viewing property,
 					contacting dealer, register yourself as dealer, filtering
 					according to your Requirement using HTML, CSS, PHP,
